<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaceMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_race">Race</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="menu_items">
        <item>Home</item>
        <item>Race</item>
        <item>Challenges</item>
        <item>Profile</item>
        <item>Friends</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_base">Base Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_challenges">ChallengesActivity</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to register -->

    <string name="error_invalid_name">This name is invalid</string>

    <!-- Strings related to race -->

    <string name="race_session_notification_ticker">Tracking route</string>
    <string name="race_session_notification_title">Tracking route</string>
    <string name="race_session_notification_text">Race session has begun and is currently tracking your route</string>
    <string name="error_username_taken">The username has been taken!</string>
    <string name="error_email_taken">This email is already registered!</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_close">Close</string>

    <string-array name="race_type">
        <item>Cycle</item>
        <item>Walk</item>
        <item>Run</item>
    </string-array>

    <!-- Strings related to profile page -->
    <string name="profile_gender">Gender</string>
    <string name="profile_save">Save</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_name">Name</string>
    <string name="profile_my_challenges"><u>My Challenges</u></string>
    <string name="profile_achievements"><u>My achievements</u></string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_friends">You don\'t have any friends added.\nLook for friends by searching above!</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="no_requests">You currently don\'t have any new friend requests.</string>
    <string name="no_races">You don\'t currently have any races logged.</string>
    <string name="title_activity_view_race">ViewRaceActivity</string>
    <string name="settings_testmode">Test mode</string>
    <string name="settings_units">Units</string>

    <string name="completefirst">Complete your first route</string>
    <string name="challengefriend">Challenge a friend</string>
    <string name="completefriend">Complete a friends challenge</string>
    <string name="rain">Run in the rain</string>
    <string name="sun">Run in the sun</string>
    <string name="total5miles">Run a total of 5 miles</string>
    <string name="total10miles">Run a total of 10 miles</string>
    <string name="complete5routes">Complete 5 routes</string>
    <string name="complete10routes">Complete 10 routes</string>
    <string name="complete5mile">Complete a 5 mile route</string>
    <string name="complete10mile">Complete a 10 mile route</string>
    <string name="beatowntime">Beat your own time on a route</string>

</resources>
