<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rawand.raceme.ChallengesActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:text="@string/completefirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <ImageView
                    android:src="@drawable/completefirst_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/completefirst_imageview"
                    android:tag = "completefirst" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/challengefriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/challengefriend_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/challengefriend_imageview"
                    android:tag = "challengefriend" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/completefriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/completefriend_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/completefriend_imageview"
                    android:tag = "completefriend" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/rain_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/rain_imageview"
                    android:tag = "rain" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/sun_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/sun_imageview"
                    android:tag = "sun" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/total5miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/total5miles_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/total5miles_imageview"
                    android:tag = "total5miles" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/total10miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/total10miles_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/total10miles_imageview"
                    android:tag = "total10miles" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/complete5routes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/complete5routes_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/complete5routes_imageview"
                    android:tag = "complete5routes" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/complete10routes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/complete10routes_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/complete10routes_imageview"
                    android:tag = "complete10routes" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/complete5mile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/complete5mile_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/complete5mile_imageview"
                    android:tag = "complete5mile" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/complete10mile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/complete10mile_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/complete10mile_imageview"
                    android:tag = "complete10mile" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/beatowntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <ImageView
                    android:src="@drawable/beatowntime_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:id="@+id/beatowntime_imageview"
                    android:tag = "beatowntime" />
            </TableRow>

        </TableLayout>


    </ScrollView>

</LinearLayout>
